--- a/PoC on Several Objs.ipynb
+++ b/PoC on Several Objs.ipynb
@@ -127,9 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot(im, orig_field):\n",
@@ -161,9 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def slice_and_stack(outputs): \n",
@@ -228,7 +224,6 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1319,7 +1314,6 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "source": [
@@ -1354,7 +1348,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
